fix index page on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@ nav.navbar{
     padding-top:10px;
     padding-left:30px;
     padding-right:30px;
-    font-size: 18px;
+    font-size: 1.15rem;
     transition: font-size ease .15s, height ease .3s;
 }
 nav.navbar.shrink {
-    font-size:16px;
+    font-size: 1.1rem;
 }
 nav.navbar.shrink .navbar-brand{
-    font-size: 25px;
+    font-size: 1.5rem;
 }
 body{
     font-size: 16px;
@@ -48,9 +48,11 @@ footer p{
     padding-bottom:10px;
 }
 
+
+
 /* Classes */
 .navbar-brand{
-    font-size: 35px;
+    font-size: 2.2rem;
 }
 .navbar-dark .navbar-nav li .nav-link,
 .navbar-brand{
@@ -75,7 +77,7 @@ footer p{
     color:#fff;
 }
 .jumbotron p {
-    font-size: 1.3em;
+    font-size: 1.3rem;
 }
 .video{
     max-height: 641px;
@@ -179,6 +181,16 @@ footer p{
 }
 #blog-theo {
     background-color: #ccebff;
+}
+
+@media screen and (max-width: 430px) {
+  .navbar-toggler {
+    #padding: 0.1rem;
+    #font-size: 1rem;
+  }
+  .navbar-brand {
+    font-size: 1.75rem;
+  }
 }
 
 
